# sieve-filters

./: .gitignore  README.md
expor-sieve/: .gitignore  README.md  background.js  manifest.json  package-lock.json  package.json  policies.example.json
expor-sieve-proxy/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.fragment.yml  install.sh  pyproject.toml  uninstall.sh
expor-sieve-proxy/conf/: nginx-site.sieve-proxy.custom
expor-sieve-proxy/scripts/: dev-up.sh  smoke.sh
expor-sieve-proxy/src/expor_sieve_proxy/: __init__.py  auth.py  config.py  f2b.py  logging.py  main.py  models.py  ownership.py  ratelimit.py  routes.py  upstream.py
expor-sieve-proxy/tests/: conftest.py  test_auth.py  test_f2b.py  test_models.py  test_ownership.py  test_ratelimit.py  test_routes.py
expor-sieve-proxy/tests/integration/: docker-compose.test.yml  mock_mailcow.py  test_e2e.py
expor-sieve/editor/: editor.css  editor.html  editor.js
expor-sieve/lib/: config_loader.js  folder_filter.js  folder_path.js  imap_utf7.js  local_filter_mapper.js  local_runner.js  proxy_client.js  rule_form.js  rule_model.js  sieve_adapter.js  tag_picker.js  wizard_prefs.js
expor-sieve/manager/: manager.css  manager.html  manager.js
expor-sieve/options/: options.css  options.html  options.js
expor-sieve/tests/: config_loader.test.js  folder_path.test.js  local_filter_mapper.test.js  local_runner.test.js  manager.test.js  migration.test.js  notify_pref.test.js  proxy_client.test.js  sieve_adapter.test.js  wizard_prefs.test.js
expor-sieve/tools/: diagnose-folders.js
(+10 files in other folders)
