[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expor-sieve-proxy"
version = "0.3.1"
description = "Authenticating proxy between expor-sieve plugin and mailcow REST API"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "aioimaplib>=1.1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.5",
    "anyio>=4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/expor_sieve_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-ra"

[tool.coverage.run]
source = ["src/expor_sieve_proxy"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]
